Bug #12415
ecpp: variable may be used uninitialized
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 9:
../../common/io/ecpp.c: In function 'ecpp_isr': ../../common/io/ecpp.c:3226:2: error: 'dsr' may be used uninitialized in this function [-Werror=maybe-uninitialized] 3226 | ecpp_error(pp->dip, | ^~~~~~~~~~~~~~~~~~~ 3227 | "isr:unknown: dcsr=%x ecr=%x dsr=%x dcr=%x\nmode=%x phase=%x\n", | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 3228 | dcsr, ECR_READ(pp), dsr, DCR_READ(pp), | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 3229 | pp->current_mode, pp->current_phase); | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ../../common/io/ecpp.c:3226:2: error: 'dcsr' may be used uninitialized in this function [-Werror=maybe-uninitialized] cc1: all warnings being treated as errors
Updated by Electric Monk 10 months ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit f70049b72ff8162093254e3d617172d6df9705f1
commit f70049b72ff8162093254e3d617172d6df9705f1 Author: Toomas Soome <tsoome@me.com> Date: 2020-04-01T15:01:16.000Z 12415 ecpp: variable may be used uninitialized Reviewed by: Gary Mills <gary_mills@fastmail.fm> Approved by: Dan McDonald <danmcd@joyent.com>